tests/invalid/type/list_pop_empty_static.pts
function main() : void {
    list<int> xs = [];
    xs.pop();
}
